grafana/templates/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dbaas-grafana-ingress
  namespace: cloudos-dbaas-base
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
     rewrite /dbaas/grafana/(.*)  /$1 break;
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /dbaas/grafana
        backend:
          serviceName: os-dbaas-monitor-grafana
          servicePort: 3000
